--- a/mow.css
+++ b/mow.css
@@ -77,6 +77,7 @@
 #gamezone #playertables .players-row {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   padding: 15px;
 }
 #gamezone #playertables #toprowplayers {
@@ -222,6 +223,27 @@
   justify-content: center;
   align-items: center;
   z-index: 2;
+}
+#gamezone .between-players-arrow {
+  background-image: url("img/direction.jpg");
+  background-size: contain;
+  width: 47px;
+  height: 30.25px;
+  transform-origin: center center;
+  border-radius: 4px;
+  transition: transform 0.5s;
+}
+#gamezone .between-players-arrow.top {
+  transform: rotate(0deg);
+}
+#gamezone .between-players-arrow.top.direction-anticlockwise {
+  transform: rotate(180deg);
+}
+#gamezone .between-players-arrow.bottom {
+  transform: rotate(180deg);
+}
+#gamezone .between-players-arrow.bottom.direction-anticlockwise {
+  transform: rotate(0deg);
 }
 #gamezone #direction-animation-symbol {
   font-size: 1200%;
