--- a/mow.css
+++ b/mow.css
@@ -15,7 +15,15 @@
 #direction-text #direction-play-symbol {
   display: inline-block;
   transition: transform 500ms ease-in-out;
-  font-weight: bold;
+}
+
+.direction-arrow-icon {
+  background: url("img/direction.svg") no-repeat center;
+  width: 1rem;
+  height: 1rem;
+}
+.direction-arrow-icon.white {
+  background-image: url("img/direction-white.svg");
 }
 
 .player-board .player-hand-card {
@@ -162,9 +170,9 @@
   background-image: url("img/illustration-right.png");
   border-radius: 0 0 30px 0;
 }
-#gamezone .direction-symbol {
-  font-size: 400%;
-  text-shadow: rgba(0, 0, 0, 0.4) 0 3px 0;
+#gamezone .direction-symbol.direction-arrow-icon {
+  width: 3rem;
+  height: 3rem;
 }
 #gamezone #direction_popin {
   display: none;
