--- a/mow.css
+++ b/mow.css
@@ -25,6 +25,9 @@
 .direction-arrow-icon.white {
   background-image: url("img/direction-white.svg");
 }
+.direction-arrow-icon.white.straight {
+  background-image: url("img/direction-straight.svg");
+}
 
 .player-board .player-hand-card {
   display: inline-block;
@@ -65,13 +68,77 @@
   background-image: url("img/farmer-icon.png");
 }
 
+#direction_popin {
+  display: none;
+  margin-bottom: 20px;
+  /*display: flex;*/
+  justify-content: center;
+  align-items: center;
+}
+#direction_popin .popin-content {
+  display: flex;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 1px 1px 5px 2px #0006;
+}
+#direction_popin .popin-content #pickBlock {
+  display: none;
+  padding: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#direction_popin .popin-content #pickBlock.visible {
+  display: flex;
+}
+#direction_popin .popin-content #pickBlock .pickButton {
+  min-width: 100px;
+  max-width: 200px;
+}
+#direction_popin .direction-button {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 30px;
+}
+#direction_popin .direction-button .next-player {
+  font-weight: bold;
+}
+#direction_popin .centered {
+  display: flex;
+}
+#direction_popin.swap .centered {
+  flex-direction: row-reverse;
+}
+
+.direction-symbol {
+  font-size: 400%;
+  text-shadow: rgba(0, 0, 0, 0.4) 0 3px 0;
+}
+.direction-symbol.direction-arrow-icon {
+  width: 3rem;
+  height: 3rem;
+}
+
+#direction_animation {
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+
 #gamezone {
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
   /** Table layout **/
-  /* direction popins */
 }
 #gamezone #playertables {
   position: relative;
@@ -169,68 +236,6 @@
   width: 119px;
   background-image: url("img/illustration-right.png");
   border-radius: 0 0 30px 0;
-}
-#gamezone .direction-symbol.direction-arrow-icon {
-  width: 3rem;
-  height: 3rem;
-}
-#gamezone #direction_popin {
-  display: none;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  /*display: flex;*/
-  justify-content: center;
-  align-items: center;
-  z-index: 2;
-}
-#gamezone #direction_popin .popin-content {
-  display: flex;
-  background: white;
-  border-radius: 10px;
-  box-shadow: 1px 1px 5px 2px #0006;
-}
-#gamezone #direction_popin .popin-content #pickBlock {
-  display: none;
-  padding: 10px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-#gamezone #direction_popin .popin-content #pickBlock.visible {
-  display: flex;
-}
-#gamezone #direction_popin .popin-content #pickBlock .pickButton {
-  min-width: 100px;
-  max-width: 200px;
-}
-#gamezone #direction_popin .direction-button {
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 30px;
-}
-#gamezone #direction_popin .direction-button .next-player {
-  font-weight: bold;
-}
-#gamezone #direction_popin .centered {
-  display: flex;
-}
-#gamezone #direction_popin.swap .centered {
-  flex-direction: row-reverse;
-}
-#gamezone #direction_animation {
-  pointer-events: none;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 2;
 }
 #gamezone .between-players-arrow {
   background-image: url("img/direction.jpg");
