--- a/src/mow.scss
+++ b/src/mow.scss
@@ -28,7 +28,7 @@ $cardHeight: 188px;
     background-image: url('img/direction-white.svg');
 
     &.straight {
-      background-image: url('img/direction-straight.svg');
+      background-image: url('img/direction-straight-white.svg');
     }
   }
 }
