--- a/mow.css
+++ b/mow.css
@@ -26,7 +26,7 @@
   background-image: url("img/direction-white.svg");
 }
 .direction-arrow-icon.white.straight {
-  background-image: url("img/direction-straight.svg");
+  background-image: url("img/direction-straight-white.svg");
 }
 
 .player-board .player-hand-card {
@@ -259,9 +259,17 @@
   transform: rotate(0deg);
 }
 #gamezone #direction-animation-symbol {
-  font-size: 1200%;
+  width: 200px;
+  height: 200px;
+  background-image: url("img/direction.svg"), url("img/direction-white-shadow.png");
+  background-size: 88%, 100%;
+  background-position: center;
+  background-repeat: no-repeat;
   opacity: 0;
-  text-shadow: 0px 0px 10px white, 0px 0px 5px white, 0px 0px 2px white;
+}
+#gamezone #direction-animation-symbol.straight {
+  background-image: url("img/direction-straight.svg"), url("img/direction-straight-white-shadow.png");
+  background-size: 57%, 100%;
 }
 #gamezone .clockwiseToAnticlockwise {
   animation-name: clockwiseToAnticlockwise;
@@ -282,7 +290,6 @@
     transform: scale3d(-1, 1, 1);
   }
   100% {
-    opacity: 0;
     transform: scale3d(-0.3, 0.3, 0.3);
   }
 }
