--- a/src/_gametable.scss
+++ b/src/_gametable.scss
@@ -221,9 +221,18 @@
     }
 
     #direction-animation-symbol {
-        font-size: 1200%;
+        width: 200px;
+        height: 200px;
+        background-image: url('img/direction.svg'), url('img/direction-white-shadow.png');
+        background-size: 88%, 100%;
+        background-position: center;
+        background-repeat: no-repeat;
         opacity: 0;
-        text-shadow: 0px 0px 10px white, 0px 0px 5px white, 0px 0px 2px white;
+
+        &.straight {
+            background-image: url('img/direction-straight.svg'), url('img/direction-straight-white-shadow.png');
+            background-size: 57%, 100%;
+        }
     }
 
     .clockwiseToAnticlockwise {
@@ -246,7 +255,7 @@
             transform: scale3d(-1, 1, 1);
         }
         100% {
-            opacity: 0;
+            //opacity: 0;
             transform: scale3d(-0.3, 0.3, 0.3);
         }
     } 
