display played farmer

--- a/src/_gametable.scss
+++ b/src/_gametable.scss
@@ -334,6 +334,31 @@
             transform: scale3d(0.3, 0.3, 0.3);
         }
     } 
+
+    #farmer-animation-wrapper {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        pointer-events: none;
+        opacity: 0;
+        transition: opacity 0.1s;
+
+        #farmer-animation {
+            background: #FFFFFFEE;
+            box-shadow: 0 0 20px 15px #FFFFFFEE;
+            z-index: 1000;
+            font-size: 250%;
+            padding: 30px;
+            border-radius: 30px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+        }
+    }
 }
 
 #opponent-hand {
