--- a/mow.css
+++ b/mow.css
@@ -377,13 +377,16 @@
   background: #FFFFFFEE;
   box-shadow: 0 0 20px 15px #FFFFFFEE;
   z-index: 1000;
-  font-size: 250%;
   padding: 30px;
   border-radius: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  max-width: 800px;
+}
+#gamezone #farmer-animation-wrapper #farmer-animation #farmer-animation-text {
+  font-size: 250%;
 }
 
 #opponent-hand {
