See collected cards

--- a/src/mow.scss
+++ b/src/mow.scss
@@ -38,6 +38,7 @@ $cardHeight: 188px;
 @import 'handdeck';
 @import 'tooltips';
 @import 'logs';
+@import 'collected';
 
 .hand-wrap {
     display: flex;
