--- a/mow.css
+++ b/mow.css
@@ -557,6 +557,197 @@
   background-position-x: 100%;
 }
 
+#popin_mowCollectedDialog {
+  background-repeat: repeat;
+  max-width: 100vw;
+  max-height: 80vh;
+  overflow: hidden;
+}
+
+#collected-popin {
+  max-width: 35rem;
+  max-height: calc(80vh - 80px);
+  overflow: auto;
+}
+#collected-popin h1 {
+  color: black;
+}
+#collected-popin .collected-cards {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+#collected-popin .collected-cards .message {
+  padding: 10px;
+  font-style: italic;
+}
+#collected-popin .collected-cards .card {
+  width: 121px;
+  height: 188px;
+  border-radius: 10px;
+  margin: 5px;
+  box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.5);
+}
+#collected-popin .collected-cards .card[data-type="0"] {
+  background-image: url("img/cards0.jpg");
+}
+#collected-popin .collected-cards .card[data-type="0"][data-number="1"] {
+  background-position-x: 0%;
+}
+#collected-popin .collected-cards .card[data-type="0"][data-number="2"] {
+  background-position-x: 7.1428571429%;
+}
+#collected-popin .collected-cards .card[data-type="0"][data-number="3"] {
+  background-position-x: 14.2857142857%;
+}
+#collected-popin .collected-cards .card[data-type="0"][data-number="4"] {
+  background-position-x: 21.4285714286%;
+}
+#collected-popin .collected-cards .card[data-type="0"][data-number="5"] {
+  background-position-x: 28.5714285714%;
+}
+#collected-popin .collected-cards .card[data-type="0"][data-number="6"] {
+  background-position-x: 35.7142857143%;
+}
+#collected-popin .collected-cards .card[data-type="0"][data-number="7"] {
+  background-position-x: 42.8571428571%;
+}
+#collected-popin .collected-cards .card[data-type="0"][data-number="8"] {
+  background-position-x: 50%;
+}
+#collected-popin .collected-cards .card[data-type="0"][data-number="9"] {
+  background-position-x: 57.1428571429%;
+}
+#collected-popin .collected-cards .card[data-type="0"][data-number="10"] {
+  background-position-x: 64.2857142857%;
+}
+#collected-popin .collected-cards .card[data-type="0"][data-number="11"] {
+  background-position-x: 71.4285714286%;
+}
+#collected-popin .collected-cards .card[data-type="0"][data-number="12"] {
+  background-position-x: 78.5714285714%;
+}
+#collected-popin .collected-cards .card[data-type="0"][data-number="13"] {
+  background-position-x: 85.7142857143%;
+}
+#collected-popin .collected-cards .card[data-type="0"][data-number="14"] {
+  background-position-x: 92.8571428571%;
+}
+#collected-popin .collected-cards .card[data-type="0"][data-number="15"] {
+  background-position-x: 100%;
+}
+#collected-popin .collected-cards .card[data-type="1"] {
+  background-image: url("img/cards1.jpg");
+}
+#collected-popin .collected-cards .card[data-type="1"][data-number="2"] {
+  background-position-x: 0%;
+}
+#collected-popin .collected-cards .card[data-type="1"][data-number="3"] {
+  background-position-x: 8.3333333333%;
+}
+#collected-popin .collected-cards .card[data-type="1"][data-number="4"] {
+  background-position-x: 16.6666666667%;
+}
+#collected-popin .collected-cards .card[data-type="1"][data-number="5"] {
+  background-position-x: 25%;
+}
+#collected-popin .collected-cards .card[data-type="1"][data-number="6"] {
+  background-position-x: 33.3333333333%;
+}
+#collected-popin .collected-cards .card[data-type="1"][data-number="7"] {
+  background-position-x: 41.6666666667%;
+}
+#collected-popin .collected-cards .card[data-type="1"][data-number="8"] {
+  background-position-x: 50%;
+}
+#collected-popin .collected-cards .card[data-type="1"][data-number="9"] {
+  background-position-x: 58.3333333333%;
+}
+#collected-popin .collected-cards .card[data-type="1"][data-number="10"] {
+  background-position-x: 66.6666666667%;
+}
+#collected-popin .collected-cards .card[data-type="1"][data-number="11"] {
+  background-position-x: 75%;
+}
+#collected-popin .collected-cards .card[data-type="1"][data-number="12"] {
+  background-position-x: 83.3333333333%;
+}
+#collected-popin .collected-cards .card[data-type="1"][data-number="13"] {
+  background-position-x: 91.6666666667%;
+}
+#collected-popin .collected-cards .card[data-type="1"][data-number="14"] {
+  background-position-x: 100%;
+}
+#collected-popin .collected-cards .card[data-type="2"] {
+  background-image: url("img/cards2.jpg");
+}
+#collected-popin .collected-cards .card[data-type="2"][data-number="3"] {
+  background-position-x: 0%;
+}
+#collected-popin .collected-cards .card[data-type="2"][data-number="4"] {
+  background-position-x: 10%;
+}
+#collected-popin .collected-cards .card[data-type="2"][data-number="5"] {
+  background-position-x: 20%;
+}
+#collected-popin .collected-cards .card[data-type="2"][data-number="6"] {
+  background-position-x: 30%;
+}
+#collected-popin .collected-cards .card[data-type="2"][data-number="7"] {
+  background-position-x: 40%;
+}
+#collected-popin .collected-cards .card[data-type="2"][data-number="8"] {
+  background-position-x: 50%;
+}
+#collected-popin .collected-cards .card[data-type="2"][data-number="9"] {
+  background-position-x: 60%;
+}
+#collected-popin .collected-cards .card[data-type="2"][data-number="10"] {
+  background-position-x: 70%;
+}
+#collected-popin .collected-cards .card[data-type="2"][data-number="11"] {
+  background-position-x: 80%;
+}
+#collected-popin .collected-cards .card[data-type="2"][data-number="12"] {
+  background-position-x: 90%;
+}
+#collected-popin .collected-cards .card[data-type="2"][data-number="13"] {
+  background-position-x: 100%;
+}
+#collected-popin .collected-cards .card[data-type="3"] {
+  background-image: url("img/cards3.jpg");
+}
+#collected-popin .collected-cards .card[data-type="3"][data-number="7"] {
+  background-position-x: 0%;
+}
+#collected-popin .collected-cards .card[data-type="3"][data-number="8"] {
+  background-position-x: 50%;
+}
+#collected-popin .collected-cards .card[data-type="3"][data-number="9"] {
+  background-position-x: 100%;
+}
+#collected-popin .collected-cards .card[data-type="5"] {
+  background-image: url("img/cards5.jpg");
+}
+#collected-popin .collected-cards .card[data-type="5"][data-number="0"] {
+  background-position-x: 0%;
+}
+#collected-popin .collected-cards .card[data-type="5"][data-number="16"] {
+  background-position-x: 20%;
+}
+#collected-popin .collected-cards .card[data-type="5"][data-number="21"] {
+  background-position-x: 40%;
+}
+#collected-popin .collected-cards .card[data-type="5"][data-number="22"] {
+  background-position-x: 60%;
+}
+#collected-popin .collected-cards .card[data-type="5"][data-number="70"] {
+  background-position-x: 80%;
+}
+#collected-popin .collected-cards .card[data-type="5"][data-number="90"] {
+  background-position-x: 100%;
+}
+
 .hand-wrap {
   display: flex;
   padding: 0;
